<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".devices.DeviceEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceEdit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Device name"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/name_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deviceEdit_name_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/deviceEdit_changeText"
        android:layout_width="352dp"
        android:layout_height="54dp"
        android:text="If you'd like to change the device's password, please enter the new password here. Otherwise, please leave the fields blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceEdit_name"
        app:layout_constraintVertical_bias="0.06" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceEdit_newPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="New device password"
        app:endIconMode="password_toggle"
        app:helperText="@string/password_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceEdit_changeText"
        app:layout_constraintVertical_bias="0.028">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deviceEdit_newPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/deviceEdit_passwordText"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:text="Please enter device's password to confirm changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceEdit_newPassword"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceEdit_currentPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="Current device password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceEdit_passwordText"
        app:layout_constraintVertical_bias="0.091">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deviceEdit_currentPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/deviceEdit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceEdit_currentPassword"
        app:layout_constraintVertical_bias="0.508" />

    <Button
        android:id="@+id/deviceEdit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/flax"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deviceEdit_btn"
        app:layout_constraintTop_toBottomOf="@+id/deviceEdit_currentPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>